--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h3>Wander in a Sea of ​​Creativity</h3>
             <h6><strong>Mare Corp Indonesia</strong> membantu Anda menjelajah imajnasi <br> untuk membangun desain impian Anda. Gabung bersama kami <br> dan realisasikan imajinasimu.</h6>
             <br>
-            <a href="" class="btn btn-outline-dark">Learn More</a>
+            <a href="" class="btn btn-outline-dark">Bergabung</a>
         </div>
     </section>
 
